tests/NormalTests/paczka1/fuzzy1/60280046.err
Error in line 2: GCt1gExX S99 55,5
Error in line 3: Lvu S99 58,3
Error in line 4: GCt1gExX S350 93,1
Error in line 15: lZcVtt7H S99 79,6
Error in line 20: 2hfDSNmf S350 17,1
Error in line 33: CW7GbC4 S350 44,6
